--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <div class="header__nav">
               <ul class="header__nav-list">
                 <li class="header__nav-item">
-                  <a href="#" class="header__nav-link">Главная</a>
+                  <a href="#" class="header__nav-link header__nav-link-selected"
+                    >Главная</a
+                  >
                 </li>
                 <li class="header__nav-item">
                   <a href="#" class="header__nav-link">Коллекции</a>
@@ -69,5 +71,26 @@
         </div>
       </div>
     </header>
+    <main>
+      <div class="hero">
+        <div class="hero__content container">
+          <div class="hero__inner">
+            <div class="hero__logo">
+              <img src="./assets/images/hero_logo.png" alt="logo" />
+            </div>
+            <div class="hero__texts">
+              <h1 class="hero__title">Одежда для каждого</h1>
+              <p class="hero__subtitle">на каждый день</p>
+            </div>
+          </div>
+          <div class="hero__actions">
+            <label for="" class="hero__button">
+              <img src="./assets/images/hero_button.png" alt="hero_button" />
+              <p>Каталог</p>
+            </label>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
