--- a/index.html
+++ b/index.html
@@ -91,6 +91,34 @@
           </div>
         </div>
       </div>
+      <div class="season">
+        <div class="container season__content">
+          <h1 class="season__title">на этот сезон</h1>
+          <div class="season__inner">
+            <div class="season__inner-item">
+              <p>
+                Текст описания конкретной коллекции с возможным дополнением
+                уникальности
+              </p>
+              <label for="" class="hero__button">
+                <img src="./assets/images/hero_button.png" alt="hero_button" />
+                <p>Каталог</p>
+              </label>
+            </div>
+            <img
+              src="./assets/images/arrow.png"
+              alt="arrow"
+              class="season__arrow" />
+          </div>
+          <div class="season__lines">
+            <div class="season__line"></div>
+            <div class="season__line"></div>
+            <div class="season__line"></div>
+            <div class="season__line"></div>
+            <div class="season__line"></div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
