--- a/index.html
+++ b/index.html
@@ -119,6 +119,65 @@
           </div>
         </div>
       </div>
+      <div class="actual">
+        <div class="actual__content container">
+          <h1 class="actual__title">актуальное</h1>
+          <div class="actual__cards">
+            <div class="actual__card">
+              <img
+                src="./assets/images/card1.png"
+                alt="card1"
+                class="actual__card-img" />
+              <p class="actual__card-title">Костюм Advolatum соцветие</p>
+              <div class="actual__card-item">
+                <p class="actual__card-cost">3751 ₽</p>
+                <a href="#" class="actual__card-cart">В корзину</a>
+              </div>
+            </div>
+
+            <div class="actual__card">
+              <img
+                src="./assets/images/card2.png"
+                alt="card1"
+                class="actual__card-img" />
+              <p class="actual__card-title">Костюм Advolatum соцветие</p>
+              <div class="actual__card-item">
+                <p class="actual__card-cost">3751 ₽</p>
+                <a href="#" class="actual__card-cart">В корзину</a>
+              </div>
+            </div>
+
+            <div class="actual__card">
+              <img
+                src="./assets/images/card1.png"
+                alt="card1"
+                class="actual__card-img" />
+              <p class="actual__card-title">Костюм Advolatum соцветие</p>
+              <div class="actual__card-item">
+                <p class="actual__card-cost">3751 ₽</p>
+                <a href="#" class="actual__card-cart">В корзину</a>
+              </div>
+            </div>
+
+            <div class="actual__card">
+              <img
+                src="./assets/images/card2.png"
+                alt="card1"
+                class="actual__card-img" />
+              <p class="actual__card-title">Костюм Advolatum соцветие</p>
+              <div class="actual__card-item">
+                <p class="actual__card-cost">3751 ₽</p>
+                <a href="#" class="actual__card-cart">В корзину</a>
+              </div>
+            </div>
+          </div>
+          <div class="actual__refers">
+            <a href="" class="actual__link actual__card-cart">
+              Смотреть больше
+            </a>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
