--- a/index.html
+++ b/index.html
@@ -224,5 +224,34 @@
         </div>
       </div>
     </main>
+    <footer class="footer">
+      <div class="footer__content container">
+        <p class="footer__privacy">
+          политика конфиденциальности<br />
+          согласие на обработку персональных данных
+        </p>
+        <div class="footer__items">
+          <img
+            src="./assets/images/footer_logo.png"
+            alt="logo"
+            class="footer__logo" />
+          <label for="" class="footer__texts">
+            <p>2022</p>
+            <p>GruboGovorya</p>
+          </label>
+        </div>
+        <label for="" class="footer__social">
+          <a href="/">
+            <img src="./assets/images/telegram.png" alt="Telegram icon" />
+          </a>
+          <a href="/">
+            <img src="./assets/images/vk.png" alt="Vk icon" />
+          </a>
+          <a href="/">
+            <img src="./assets/images/instagram.png" alt="Instagram icon" />
+          </a>
+        </label>
+      </div>
+    </footer>
   </body>
 </html>
