--- a/index.html
+++ b/index.html
@@ -182,10 +182,7 @@
         <div class="contact__content container">
           <h1 class="contact__title">мы всегда на связи</h1>
           <div class="contact__actions">
-            <div
-              class="contact__map"
-              id="map"
-              style="width: 1000px; height: 550px"></div>
+            <div class="contact__map" id="map"></div>
 
             <script src="https://mapgl.2gis.com/api/js/v1"></script>
             <script>
