--- a/index.html
+++ b/index.html
@@ -82,7 +82,19 @@
               <h1 class="hero__title">Одежда для каждого</h1>
               <p class="hero__subtitle">на каждый день</p>
             </div>
+            <div class="hero__social">
+              <a href="/">
+                <img src="./assets/images/telegram.png" alt="Telegram icon" />
+              </a>
+              <a href="/">
+                <img src="./assets/images/vk.png" alt="Vk icon" />
+              </a>
+              <a href="/">
+                <img src="./assets/images/instagram.png" alt="Instagram icon" />
+              </a>
+            </div>
           </div>
+
           <div class="hero__actions">
             <label for="" class="hero__button">
               <img src="./assets/images/hero_button.png" alt="hero_button" />
@@ -183,7 +195,6 @@
           <h1 class="contact__title">мы всегда на связи</h1>
           <div class="contact__actions">
             <div class="contact__map" id="map"></div>
-
             <script src="https://mapgl.2gis.com/api/js/v1"></script>
             <script>
               const map = new mapgl.Map("map", {
@@ -223,6 +234,17 @@
     </main>
     <footer class="footer">
       <div class="footer__content container">
+        <div class="footer__social-800">
+          <a href="/">
+            <img src="./assets/images/telegram.png" alt="Telegram icon" />
+          </a>
+          <a href="/">
+            <img src="./assets/images/vk.png" alt="Vk icon" />
+          </a>
+          <a href="/">
+            <img src="./assets/images/instagram.png" alt="Instagram icon" />
+          </a>
+        </div>
         <p class="footer__privacy">
           политика конфиденциальности<br />
           согласие на обработку персональных данных
@@ -232,6 +254,10 @@
             src="./assets/images/footer_logo.png"
             alt="logo"
             class="footer__logo" />
+          <p class="footer__privacy footer__privacy-800">
+            политика конфиденциальности<br />
+            согласие на обработку персональных данных
+          </p>
           <label for="" class="footer__texts">
             <p>2022</p>
             <p>GruboGovorya</p>
