--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <header class="header">
       <div class="header__content container">
+        <div class="header__options">
+          <img src="./assets/images/options.png" alt="options" />
+        </div>
         <div class="header__left">
           <div class="header__actions">
             <div class="header__logo">
